--- a/index.html
+++ b/index.html
@@ -13,7 +13,19 @@
     <title>Recipe &#8226; Categories</title>
 </head>
 
+
 <body>
+
+    <nav class="navbar">
+        <div id="logo">&nbsp;<span>Big Oven</span><img src="./img/chef.png" alt="Big Oven"></div>
+        <ul class="nav-links">
+            <li><a href="#" class="nav-link">Home</a></li>
+            <li><a href="#" class="nav-link">Categories <ion-icon name="caret-down-outline"></ion-icon></a></li>
+            <li><a href="#" class="nav-link">Feedback</a></li>
+            <li><a href="#" class="login-btn nav-link">Join <ion-icon name="log-in-outline"></ion-icon></a></li>
+        </ul>
+    </nav>
+
     <div class="modal-bg">
         <button id="close-modal">X</button>
         <div class="modal">
@@ -26,6 +38,7 @@
             </div>
         </div>
     </div>
+
     <div class="header-info-div">
         <h1 class="heading">Categories</h1>
     </div>
