--- a/categories.html
+++ b/categories.html
@@ -25,7 +25,23 @@
             <li><a href="#" class="login-btn nav-link">Join <ion-icon name="log-in-outline"></ion-icon></a></li>
         </ul>
     </nav>
+    <div class="modal-bg">
+        <button id="close-modal">X</button>
+        <div class="modal">
+            <div class="modal-header">
+                <h2></h2>
+                <hr style="background: black; margin: 0 10px;">
+            </div>
+            <div class="modal-body">
+                <p></p>
+            </div>
+        </div>
+    </div>
 
+    <div class="header-info-div">
+        <h1 class="heading">Categories</h1>
+    </div>
+    <div class="cat"></div>
 
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
