--- a/ingredients.html
+++ b/ingredients.html
@@ -28,7 +28,7 @@
     <nav class="navbar">
         <div id="logo">&nbsp;<span>Big Oven</span><img src="./img/chef.png" alt="Big Oven"></div>
         <ul class="nav-links">
-            <li><a href="#" class="nav-link">Home</a></li>
+            <li><a href="./index.html" class="nav-link">Home</a></li>
             <li><a href="#" class="nav-link">Categories <ion-icon name="caret-down-outline"></ion-icon></a></li>
             <li><a href="#" class="nav-link">Feedback</a></li>
             <li><a href="#" class="login-btn nav-link">Join <ion-icon name="log-in-outline"></ion-icon></a></li>
