--- a/categories.html
+++ b/categories.html
@@ -10,7 +10,7 @@
 
     <link rel="icon" href="./img/chef.png" type="image/icon type">
 
-    <title>Recipe &#8226; Categories</title>
+    <title>BigOven &#8226; Categories</title>
 </head>
 
 
@@ -20,7 +20,7 @@
         <div id="logo">&nbsp;<span>Big Oven</span><img src="./img/chef.png" alt="Big Oven"></div>
         <ul class="nav-links">
             <li><a href="./index.html" class="nav-link">Home</a></li>
-            <li><a href="#" class="nav-link">Categories <ion-icon name="caret-down-outline"></ion-icon></a></li>
+            <li><a href="#" class="nav-link">Explore <ion-icon name="caret-down-outline"></ion-icon></a></li>
             <li><a href="#" class="nav-link">Feedback</a></li>
             <li><a href="#" class="login-btn nav-link">Join <ion-icon name="log-in-outline"></ion-icon></a></li>
         </ul>
