--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <link rel="icon" href="./img/chef.png" type="image/icon type">
 
-    <title>Recipe &#8226; Categories</title>
+    <title>BigOven &#8226; Home</title>
 </head>
 
 
@@ -20,13 +20,21 @@
         <div id="logo">&nbsp;<span>Big Oven</span><img src="./img/chef.png" alt="Big Oven"></div>
         <ul class="nav-links">
             <li><a href="./index.html" class="nav-link">Home</a></li>
-            <li><a href="#" class="nav-link">Categories <ion-icon name="caret-down-outline"></ion-icon></a></li>
+            <li><a href="#" class="nav-link">Explore <ion-icon name="caret-down-outline"></ion-icon></a></li>
             <li><a href="#" class="nav-link">Feedback</a></li>
             <li><a href="#" class="login-btn nav-link">Join <ion-icon name="log-in-outline"></ion-icon></a></li>
         </ul>
     </nav>
 
-
+    <div style="text-align: center;">
+        <h1 style="font-size: 50px;">Welcome,</h1>
+        <h4>Cooking made easy. Get your favourite recipes in a few clicks.</h4>
+        <div style="display: inline-block; margin: 1rem; display: flex; justify-content: center;
+        align-items: center;">
+            <a href="./categories.html" class="btn" style="margin: 1rem;">Explore Categories</a>
+            <a href="./ingredients.html" class="btn" style="margin: 1rem;">Explore Ingredients</a>
+        </div>
+    </div>
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
