--- a/ingredients.html
+++ b/ingredients.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="./img/chef.png" type="image/icon type">
 
 
-    <title>Recipe &#8226; Ingredients</title>
+    <title>BigOven &#8226; Ingredients</title>
 </head>
 <style>
     .modal-body{
@@ -29,7 +29,7 @@
         <div id="logo">&nbsp;<span>Big Oven</span><img src="./img/chef.png" alt="Big Oven"></div>
         <ul class="nav-links">
             <li><a href="./index.html" class="nav-link">Home</a></li>
-            <li><a href="#" class="nav-link">Categories <ion-icon name="caret-down-outline"></ion-icon></a></li>
+            <li><a href="#" class="nav-link">Explore <ion-icon name="caret-down-outline"></ion-icon></a></li>
             <li><a href="#" class="nav-link">Feedback</a></li>
             <li><a href="#" class="login-btn nav-link">Join <ion-icon name="log-in-outline"></ion-icon></a></li>
         </ul>
