--- a/ingredients.html
+++ b/ingredients.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="mobile-web-app-capable" content="yes">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
 
     <link rel="icon" href="./img/chef.png" type="image/icon type">
 
@@ -14,6 +14,9 @@
     <title>BigOven &#8226; Ingredients</title>
 </head>
 <style>
+    .modal-header h2{
+        margin: 1rem 0;
+    }
     .modal-body{
         position: relative;
         display: flex;
@@ -70,6 +73,7 @@
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="test.js"></script>
+    <script src="./js/app.js"></script>
+    <script src="./js/ingredients.js"></script>
 </body>
 </html>
