responsive navbar added

--- a/ingredients.html
+++ b/ingredients.html
@@ -34,7 +34,7 @@
             <li><a href="./index.html" class="nav-link">Home</a></li>
             <li><a href="#" class="nav-link">Explore <ion-icon name="caret-down-outline"></ion-icon></a></li>
             <li><a href="#" class="nav-link">Feedback</a></li>
-            <li><a href="#" class="login-btn nav-link">Join <ion-icon name="log-in-outline"></ion-icon></a></li>
+            <li><a href="#" class="login-btn nav-link">Join&nbsp;<ion-icon name="log-out-outline"></ion-icon></a></li>
         </ul>
     </nav>
 
