--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
             <li><a href="./index.html" class="nav-link">Home</a></li>
             <li><a href="#" class="nav-link">Explore <ion-icon name="caret-down-outline"></ion-icon></a></li>
             <li><a href="#" class="nav-link">Feedback</a></li>
-            <li><a href="#" class="login-btn nav-link">Join&nbsp;<ion-icon name="log-out-outline"></ion-icon></a></li>
+            <li><a href="#" class="login-btn nav-link">Join&nbsp;<ion-icon name="log-out-outline"></ion-icon></a>
+            </li>
         </ul>
     </nav>
 
@@ -37,6 +38,7 @@
         </div>
     </div>
 
+    <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
