close search btn added

--- a/ingredients.html
+++ b/ingredients.html
@@ -25,6 +25,7 @@
         align-items: center;
         overflow-y: unset !important;
     }
+
 </style>
 <body>
 
@@ -65,6 +66,7 @@
             <div class="inp-append-div">
                 <ion-icon name="search-outline"></ion-icon>
                 <input type="text" name="ing-search-text" id="ing-search-text" placeholder="search ingredient...">
+                <ion-icon name="close-circle-outline" id="close-search-bar"></ion-icon>
             </div>
         </form>
     </div>
