added netlify identity auth functions

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
             <li><a href="./index.html" class="nav-link">Home</a></li>
             <li><a href="#" class="nav-link">Explore <ion-icon name="caret-down-outline"></ion-icon></a></li>
             <li><a href="#" class="nav-link">Feedback</a></li>
-            <li><a href="javascript:null" class="login-btn nav-link">Join&nbsp;<ion-icon name="log-out-outline"></ion-icon></a></li>
+            <li><a href="javascript:null" class="login-btn nav-link">Join/Login</a></li>
         </ul>
+        <!-- &nbsp;<ion-icon name="log-in-outline"></ion-icon> -->
     </nav>
 
     <div style="text-align: center; margin: 0 2rem;">
