--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </nav>
 
     <div style="text-align: center; margin: 0 2rem;">
-        <h1 style="font-size: 50px;">Welcome,</h1>
+        <h1 id="welcome-msg" style="font-size: 50px;">Welcome</h1>
         <h4>Cooking made easy. Get your favourite recipes in a few clicks.</h4>
         <div style="display: inline-block; margin: 1rem; display: flex; justify-content: center;
         align-items: center;">
