color to username

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <title>BigOven &#8226; Home</title>
 </head>
 
+<style>
+    .welcome-username{
+        color: #743ad5;
+    }
+</style>
 
 <body>
 
