--- a/index.html
+++ b/index.html
@@ -33,20 +33,32 @@
         <!-- &nbsp;<ion-icon name="log-in-outline"></ion-icon> -->
     </nav>
 
-    <div style="text-align: center; margin: 0 2rem;">
-        <h1 id="welcome-msg" style="font-size: 50px;">Welcome</h1>
-        <h4>Cooking made easy. Get your favourite recipes in a few clicks.</h4>
-        <div style="display: inline-block; margin: 1rem; display: flex; justify-content: center;
-        align-items: center;">
-            <a href="./categories.html" class="btn" style="margin: 1rem;">Explore Categories</a>
-            <a href="./ingredients.html" class="btn" style="margin: 1rem;">Explore Ingredients</a>
+    <main>
+        <div class='hero'>
+            <div class="hero-text-div">
+                <h1 id="welcome-msg" style="font-size: 50px;">Welcome</h1>
+                <h3>Cooking made easy.</h3>
+                <p>Explore through a collection of awesome recipes and filter your favoutirte by categories, quizines and even ingredients.</p>
+            </div>
+            <div class="hero-img-div">
+                <img class="hero-img" src="./img/hero-img-1.svg" alt="hero-img">
+            </div>
         </div>
-    </div>
+            <div style="display: inline-block; margin: 1rem; display: flex; justify-content: center;
+            align-items: center;">
+                <a href="./categories.html" class="btn" style="margin: 1rem;">Explore Categories</a>
+                <a href="./ingredients.html" class="btn" style="margin: 1rem;">Explore Ingredients</a>
+            </div>
+        <div class="global-meal-search-area">
+            <h1>Search Meals</h1>
+        </div>
+    </main>
 
     <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./js/app.js"></script>
+    <script src="./js/home.js"></script>
 </body>
 </html>
