spacing bug -welcome msg

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <main>
         <div class='hero'>
             <div class="hero-text-div">
-                <h1 id="welcome-msg" style="font-size: 50px;">Welcome</h1>
+                <h1 id="welcome-msg">Welcome</h1>
                 <h3 style="color: #743ad5;">Cooking made easy.</h3>
                 <p>Explore through a collection of awesome recipes and filter your favoutirte by categories, quizines and even ingredients.</p>
                 <div class="hero-buttons-div">
