--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         margin-bottom: 0.5rem;
     }
 
+
 </style>
 
 <body>
@@ -67,10 +68,11 @@
                 <ion-icon name="search-outline"></ion-icon>
                 <input type="text" name="main-search-text" id="main-search-text" placeholder="search recipes...">
             </div>
-            <div class="g-meal-search-results">
-
-            </div>
+            <br>
+            <span class="search-result-count"></span>
+            <div class="g-meal-search-results"> </div>
         </div>
+        <br><br>
     </main>
 
     <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
