--- a/index.html
+++ b/index.html
@@ -23,10 +23,26 @@
         width: auto !important;
         height: auto !important;
     }
+    .toggle-btn-div{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
     .searched-meal-div *{
         margin-bottom: 0.5rem;
     }
-
+    #ing-tag{
+        text-align: center;
+    }
+    iframe{
+        object-fit: contain;
+        border: 4px solid #743ad5;
+        border-radius: 10px !important;
+        min-height: 20vh !important;
+        min-width: 20vw !important;
+        height: auto;
+        width: auto;
+    }
 
 </style>
 
