--- a/index.html
+++ b/index.html
@@ -36,10 +36,15 @@
     }
     iframe{
         object-fit: contain;
-        border: 4px solid #743ad5;
         border-radius: 10px !important;
-        min-height: 20vh !important;
-        min-width: 20vw !important;
+        border-radius: 100%;
+        border: solid 4px transparent;
+        background-image: linear-gradient(white, white),
+            radial-gradient(circle at top left, #743ad5, #d53a9d);
+        background-origin: border-box;
+        background-clip: content-box, border-box;
+        min-height: 75vh !important;
+        min-width: 80% !important;
         height: auto;
         width: auto;
     }
@@ -65,7 +70,7 @@
             <div class="hero-text-div">
                 <h1 id="welcome-msg">Welcome</h1>
                 <h3 style="color: #743ad5;">Cooking made easy.</h3>
-                <p>Explore through a collection of awesome recipes and filter your favoutirte by categories, quizines and even ingredients.</p>
+                <p>Explore through a collection of awesome recipes and filter your favourites by categories, quizines and even ingredients.</p>
                 <div class="hero-buttons-div">
                     <a href="./categories.html" class="btn hero-btn">Explore Categories</a>
                     <a href="./ingredients.html" class="btn hero-btn">Explore Ingredients</a>
