changedhamburger menu icon

--- a/categories.html
+++ b/categories.html
@@ -18,7 +18,7 @@
 
     <nav class="navbar">
         <div id="logo">&nbsp;<span>Big Oven</span><img src="./img/chef.png" alt="Big Oven"></div>
-        <div class="hamburger"><ion-icon name="menu-outline"></ion-icon></div>
+        <div class="hamburger"><ion-icon name="apps-outline"></ion-icon></div>
         <ul class="nav-links">
             <li><a href="./index.html" class="nav-link">Home</a></li>
             <li><a href="#" class="nav-link">Explore <ion-icon name="caret-down-outline"></ion-icon></a></li>
