--- a/index.html
+++ b/index.html
@@ -45,7 +45,15 @@
         <div class="hamburger"><ion-icon name="apps-outline"></ion-icon></div>
         <ul class="nav-links">
             <li><a href="./index.html" class="nav-link">Home</a></li>
-            <li><a href="#" class="nav-link">Explore <ion-icon name="caret-down-outline"></ion-icon></a></li>
+            <li><a href="#" class="nav-link dropdown-btn">Explore <ion-icon name="caret-down-outline"></ion-icon></a>            
+                <div class="dropdown-menu">
+                    <ul>
+                        <li><a href="">Categories</a></li>
+                        <li><a href="">Ingredients</a></li>
+                        <li><a href="">Quizines</a></li>
+                    </ul>
+                </div>
+            </li>
             <li><a href="#" class="nav-link">Feedback</a></li>
             <li><a href="javascript:null" class="login-btn nav-link">Join/Login</a></li>
         </ul>
