dropdown caret ui

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
             <li><a href="#" class="nav-link dropdown-btn">Explore <ion-icon name="caret-down-outline"></ion-icon></a>            
                 <div class="dropdown-menu">
                     <ul>
-                        <li><a href="">Categories</a></li>
-                        <li><a href="">Ingredients</a></li>
-                        <li><a href="">Quizines</a></li>
+                        <li><a href="./categories.html">Categories</a></li>
+                        <li><a href="./ingredients.html">Ingredients</a></li>
+                        <li><a href="#">Quizines</a></li>
                     </ul>
                 </div>
             </li>
