--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
             <li><a href="#" class="nav-link dropdown-btn">Explore <ion-icon name="caret-down-outline"></ion-icon></a>            
                 <div class="dropdown-menu">
                     <ul>
-                        <li><a href="./categories.html"><ion-icon name="copy-outline"></ion-icon> Categories</a></li>
-                        <li><a href="./ingredients.html"><ion-icon name="restaurant-outline"></ion-icon> Ingredients</a></li>
-                        <li><a href="#"><ion-icon name="earth-outline"></ion-icon> Quizines</a></li>
+                        <li><a href="./categories.html"><ion-icon name="copy-outline"></ion-icon> &nbsp;&nbsp;Categories</a></li>
+                        <li><a href="./ingredients.html"><ion-icon name="restaurant-outline"></ion-icon> &nbsp;&nbsp;Ingredients</a></li>
+                        <li><a href="#"><ion-icon name="earth-outline"></ion-icon> &nbsp;&nbsp;Quizines</a></li>
                     </ul>
                 </div>
             </li>
