--- a/ingredients.html
+++ b/ingredients.html
@@ -34,8 +34,15 @@
         <div class="hamburger"><ion-icon name="apps-outline"></ion-icon></div>
         <ul class="nav-links">
             <li><a href="./index.html" class="nav-link">Home</a></li>
-            <li><a href="#" class="nav-link">Explore <ion-icon name="caret-down-outline"></ion-icon></a></li>
-            <li><a href="#" class="nav-link">Feedback</a></li>
+            <li><a href="#" class="nav-link dropdown-btn">Explore <ion-icon name="caret-down-outline"></ion-icon></a>            
+                <div class="dropdown-menu">
+                    <ul>
+                        <li><a href="./categories.html"><ion-icon name="copy-outline"></ion-icon> &nbsp;&nbsp;Categories</a></li>
+                        <li><a href="./ingredients.html"><ion-icon name="restaurant-outline"></ion-icon> &nbsp;&nbsp;Ingredients</a></li>
+                        <li><a href="#"><ion-icon name="earth-outline"></ion-icon> &nbsp;&nbsp;Quizines</a></li>
+                    </ul>
+                </div>
+            </li>            <li><a href="#" class="nav-link">Feedback</a></li>
             <li><a href="#" class="login-btn nav-link">Join&nbsp;<ion-icon name="log-out-outline"></ion-icon></a></li>
         </ul>
     </nav>
