--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="hamburger"><ion-icon name="apps-outline"></ion-icon></div>
         <ul class="nav-links">
             <li><a href="./index.html" class="nav-link">Home</a></li>
-            <li><a href="#" class="nav-link dropdown-btn">Explore <ion-icon name="caret-down-outline"></ion-icon></a>            
+            <li><a href="javascript:void(0);" class="nav-link dropdown-btn">Explore <ion-icon name="caret-down-outline"></ion-icon></a>            
                 <div class="dropdown-menu">
                     <ul>
                         <li><a href="./categories.html"><ion-icon name="copy-outline"></ion-icon> &nbsp;&nbsp;Categories</a></li>
@@ -55,7 +55,7 @@
                 </div>
             </li>
             <li><a href="#" class="nav-link">Feedback</a></li>
-            <li><a href="javascript:null" class="login-btn nav-link">Join/Login</a></li>
+            <li><a href="javascript:void(0);" class="login-btn nav-link">Join/Login</a></li>
         </ul>
         <!-- &nbsp;<ion-icon name="log-in-outline"></ion-icon> -->
     </nav>
@@ -67,17 +67,14 @@
                 <h3 style="color: #743ad5;">Cooking made easy.</h3>
                 <p>Explore through a collection of awesome recipes and filter your favourites by categories, quizines and even ingredients.</p>
                 <div class="hero-buttons-div">
-                    <a href="./categories.html" class="btn hero-btn">Explore Categories</a>
-                    <a href="./ingredients.html" class="btn hero-btn">Explore Ingredients</a>
+                    <a href="#" class="btn hero-btn dropdown-btn"><ion-icon name="planet-outline"></ion-icon>&nbsp;Explore</a>
                 </div>
             </div>
             <div class="hero-img-div">
-                <img class="hero-img" src="./img/hero-img-1.svg" alt="hero-img">
+                <img class="hero-img" src="./img/hero-img-2.svg" alt="hero-img">
             </div>
         </div>
-        <div class="meal-of-the-day">
-            <h1>A recipe for you. 😋 </h1>
-        </div>
+
         <div class="global-meal-search-area">
             <h1 class="g-meal-search-heading">Search Meals...</h1>
             <div class="inp-append-div">
@@ -87,6 +84,9 @@
             <br>
             <span class="search-result-count"></span>
             <div class="g-meal-search-results"> </div>
+        </div>
+        <div class="meal-of-the-day">
+            <h1>A recipe for you. 😋 </h1>
         </div>
         <br><br>
     </main>
