outside click close functionality for dropdown

--- a/categories.html
+++ b/categories.html
@@ -21,8 +21,8 @@
         <div class="hamburger"><ion-icon name="apps-outline"></ion-icon></div>
         <ul class="nav-links">
             <li><a href="./index.html" class="nav-link">Home</a></li>
-            <li><a href="javascript:void(0);" class="nav-link dropdown-btn">Explore <ion-icon name="caret-down-outline"></ion-icon></a>            
-                <div class="dropdown-menu">
+            <li><a href="javascript:void(0);" class="nav-link dropdown-btn" id="dropdown-btn">Explore <ion-icon name="caret-down-outline"></ion-icon></a>            
+                <div class="dropdown-menu" id="dropdown">
                     <ul>
                         <li><a href="./categories.html"><ion-icon name="copy-outline"></ion-icon> &nbsp;&nbsp;Categories</a></li>
                         <li><a href="./ingredients.html"><ion-icon name="restaurant-outline"></ion-icon> &nbsp;&nbsp;Ingredients</a></li>
