--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         <div class="hamburger"><ion-icon name="apps-outline"></ion-icon></div>
         <ul class="nav-links">
             <li><a href="./index.html" class="nav-link">Home</a></li>
-            <li><a href="javascript:void(0);" class="nav-link dropdown-btn">Explore <ion-icon name="caret-down-outline"></ion-icon></a>            
-                <div class="dropdown-menu">
+            <li><a href="javascript:void(0);" class="nav-link dropdown-btn" id="dropdown-btn">Explore <ion-icon name="caret-down-outline"></ion-icon></a>            
+                <div class="dropdown-menu" id="dropdown">
                     <ul>
                         <li><a href="./categories.html"><ion-icon name="copy-outline"></ion-icon> &nbsp;&nbsp;Categories</a></li>
                         <li><a href="./ingredients.html"><ion-icon name="restaurant-outline"></ion-icon> &nbsp;&nbsp;Ingredients</a></li>
@@ -67,7 +67,7 @@
                 <h3 style="color: #743ad5;">Cooking made easy.</h3>
                 <p>Explore through a collection of awesome recipes and filter your favourites by categories, quizines and even ingredients.</p>
                 <div class="hero-buttons-div">
-                    <a href="#" class="btn hero-btn dropdown-btn"><ion-icon name="planet-outline"></ion-icon>&nbsp;Explore</a>
+                    <a href="#" class="btn hero-btn dropdown-btn" id="dropdown-btn"><ion-icon name="planet-outline"></ion-icon>&nbsp;Explore</a>
                 </div>
             </div>
             <div class="hero-img-div">
