--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <h3 style="color: #743ad5;">Cooking made easy.</h3>
                 <p>Explore through a collection of awesome recipes and filter your favourites by categories, quizines and even ingredients.</p>
                 <div class="hero-buttons-div">
-                    <a href="#" class="btn hero-btn dropdown-btn"><ion-icon name="planet-outline" class="caret-down"></ion-icon>&nbsp;Explore</a>
+                    <a href="javascript:void(0);" class="btn hero-btn dropdown-btn"><ion-icon name="planet-outline" class="caret-down"></ion-icon>&nbsp;Explore</a>
                 </div>
             </div>
             <div class="hero-img-div">
