--- a/ingredients.html
+++ b/ingredients.html
@@ -33,7 +33,7 @@
         <div id="logo"><a href="/" style="text-decoration: none;">&nbsp;<span>BigOven</span><img src="./img/chef.png" alt="Big Oven"></a></div>
         <div class="hamburger"><ion-icon name="apps-outline"></ion-icon></div>
         <ul class="nav-links">
-            <li><a href="./index.html" class="nav-link">Home</a></li>
+            <li><a href="/" class="nav-link">Home</a></li>
             <li><a href="javascript:void(0);" class="nav-link dropdown-btn">Explore <ion-icon name="caret-down-outline" class="caret-down"></ion-icon></a>            
                 <div class="dropdown-menu">
                     <ul>
