--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             <li><a href="javascript:void(0);" class="nav-link dropdown-btn">Explore <ion-icon name="caret-down-outline" class="caret-down"></ion-icon></a>            
                 <div class="dropdown-menu" >
                     <ul>
-                        <li><a href="./categories.html"><ion-icon name="copy-outline"></ion-icon> &nbsp;&nbsp;Categories</a></li>
-                        <li><a href="./ingredients.html"><ion-icon name="restaurant-outline"></ion-icon> &nbsp;&nbsp;Ingredients</a></li>
+                        <li><a href="./categories"><ion-icon name="copy-outline"></ion-icon> &nbsp;&nbsp;Categories</a></li>
+                        <li><a href="./ingredients"><ion-icon name="restaurant-outline"></ion-icon> &nbsp;&nbsp;Ingredients</a></li>
                         <li><a href="#"><ion-icon name="earth-outline"></ion-icon> &nbsp;&nbsp;Quizines</a></li>
                     </ul>
                 </div>
