changed recipe view page title

--- a/recipe.view.html
+++ b/recipe.view.html
@@ -10,7 +10,7 @@
 
     <link rel="icon" href="./img/chef.png" type="image/icon type" />
 
-    <title>BigOven &#8226; Home</title>
+    <title>BigOven &#8226; Recipe</title>
   </head>
 
   <style>
